--- a/docs/_static/basic.css.jinja
+++ b/docs/_static/basic.css.jinja
@@ -55,7 +55,7 @@ div.sphinxsidebarwrapper {
 
 div.sphinxsidebar {
     float: left;
-    width: 230px;
+    width: {{ theme_sidebarwidth|todim }};
     margin-left: -100%;
     font-size: 90%;
     word-wrap: break-word;
@@ -222,8 +222,8 @@ table.modindextable td {
 /* -- general body styles --------------------------------------------------- */
 
 div.body {
-    min-width: 360px;
-    max-width: 800px;
+    min-width: {{ theme_body_min_width|todim }};
+    max-width: {{ theme_body_max_width|todim }};
 }
 
 div.body p, div.body dd, div.body li, div.body blockquote {
